--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,16 +1,25 @@
 <div class="col-md-4 col-md-offset-4">
-  <h2>新增t讨论区</h2>
+    <h2>新增t讨论区</h2>
 
-  <hr>
-  <%= form_for @group do |f| %>
-  标题
-  <%= f.text_field :title %>
-  <br>
-  叙述
-  <br>
-  <%= f.text_area :description %>
-  <br>
+    <hr>
+    <%= form_for @group do |f| %>
 
-  <%= f.submit "Submit", :description_with => 'Submit...' %>
-  <% end %>
+    <% if @group.errors.any? %>
+    <ul>
+      <% @group.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+    <% end %>
+  
+标题
+<%= f.text_field :title %>
+<br>
+叙述
+<br>
+<%= f.text_area :description %>
+<br>
+
+<%= f.submit "Submit", :description_with => 'Submit...' %>
+<% end %>
 </div>
