--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -2,15 +2,7 @@
     <h2>编辑讨论区</h2>
 
     <hr>
-    <%= form_for @group do |f| %>
-    标题
-    <%= f.text_field :title %>
-    <br>
-    描述
-    <br>
-    <%= f.text_area :description %>
-    <br>
 
-    <%= f.submit "Submit", :disable_with => 'Submit...' %>
-    <% end %>
+    <%= render "form" %>
+
 </div>
